--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 label {
     font-weight: bold;
-    font-size: 2.5rem;
+}
+#main-content {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form-container {
+    width: 45%;
+    /* margin: 0 auto; */
+}
+
+.sideDiv {
+    width: 45%;
+    background-color: white;
+    height: 500px;
+    border: 1px solid teal;
+    margin-bottom: 10px;
 }
