--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+#jumbo {
+    background-image: url(/images/test2.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
+    color: #57badb;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+/* .overlay {
+    background-color: rgba(0, 0, 0, 0.9);
+} */
+
 label {
     font-weight: bold;
 }
@@ -17,6 +30,11 @@ label {
     width: 45%;
     background-color: white;
     height: 500px;
-    border: 1px solid teal;
     margin-bottom: 10px;
+}
+
+.sideDiv img {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
