--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #jumbo {
-    background-image: url("https://netman5.github.io/images/test2.jpeg");
+    background-image: url("https://github.com/netman5/covidVirus-checker/blob/master/images/test2.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 500px;
